# personal-library

./: .gitignore  README.md  library.json  pyproject.toml  pytest.ini  requirements.txt  settings.json
.github/workflows/: python-tests.yml
docs/: uml.md
src/: __init__.py
src/cli/: __init__.py  main.py
src/data/: __init__.py  database.py  repository.py
src/models/: __init__.py  annotation.py  collection.py  configuration.py  mixins.py  publication.py  report.py  user.py
src/strategies/: __init__.py  evaluation_report.py  progress_report.py  report_strategy.py  top_rated_report.py
tests/: __init__.py  conftest.py  test_persistence.py
tests/cli/: test_annotation_commands.py
tests/strategies/: test_evaluation_report.py  test_top_rated_report.py
tests/test_models/: test_book.py  test_report.py
tests/unit/: test_annotation.py  test_book.py  test_collection.py  test_configuration.py  test_magazine.py  test_publication.py  test_report.py  test_user.py
